# sinch-sdk-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATION_GUIDE.md  Makefile  README copy.md  README.md  SINCH_AGENT_ACTIONS_MCP.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: CODEOWNERS
.github/scripts/: wait-for-mockserver.sh
.github/workflows/: ci.yml  documentation-upload.yaml  notify-private-repo.yml  release-sdk.yaml  run-tests.yml  run-ws.yml  sync-from-public.yml  sync-to-public.yml  wait-for-mockserver.sh
docs/: .env.example  README.md  conf.py  index.rst
docs/_static/: custom.css
examples/: .env.example  fast_api_example.py  flask_example.py  logging_example.py
examples/getting-started/conversation/send_handle_incoming_sms/: .env.example  README.md  controller.py  pyproject.toml  server.py  server_business_logic.py
examples/sinch_events/: .env.example  README.md  pyproject.toml  server.py  sinch_client_helper.py
examples/sinch_events/conversation_api/: controller.py  server_business_logic.py
examples/sinch_events/numbers_api/: controller.py  server_business_logic.py
examples/sinch_events/sms_api/: controller.py  server_business_logic.py
examples/snippets/: README.md  pyproject.toml
examples/snippets/conversation/apps/create/: snippet.py
examples/snippets/conversation/apps/delete/: snippet.py
examples/snippets/conversation/apps/get/: snippet.py
examples/snippets/conversation/apps/list/: snippet.py
examples/snippets/conversation/apps/update/: snippet.py
examples/snippets/conversation/messages/delete/: snippet.py
examples/snippets/conversation/messages/get/: snippet.py
examples/snippets/conversation/messages/list/: snippet.py
examples/snippets/conversation/messages/list_last_messages_by_channel_identity/: snippet.py
examples/snippets/conversation/messages/send/: snippet.py
examples/snippets/conversation/messages/send_card_message/: snippet.py
examples/snippets/conversation/messages/send_carousel_message/: snippet.py
examples/snippets/conversation/messages/send_choice_message/: snippet.py
examples/snippets/conversation/messages/send_contact_info_message/: snippet.py
examples/snippets/conversation/messages/send_list_message/: snippet.py
examples/snippets/conversation/messages/send_location_message/: snippet.py
examples/snippets/conversation/messages/send_media_message/: snippet.py
examples/snippets/conversation/messages/send_template_message/: snippet.py
examples/snippets/conversation/messages/send_text_message/: snippet.py
examples/snippets/conversation/messages/update/: snippet.py
examples/snippets/number_lookup/lookup/: snippet.py
examples/snippets/numbers/active_numbers/get/: snippet.py
examples/snippets/numbers/active_numbers/list/: snippet.py
examples/snippets/numbers/active_numbers/list_auto/: snippet.py
examples/snippets/numbers/active_numbers/release/: snippet.py
examples/snippets/numbers/active_numbers/update/: snippet.py
examples/snippets/numbers/available_numbers/check_availability/: snippet.py
examples/snippets/numbers/available_numbers/rent/: snippet.py
examples/snippets/numbers/available_numbers/rent_any/: snippet.py
examples/snippets/numbers/available_numbers/search_for_available_numbers/: snippet.py
examples/snippets/numbers/available_regions/list/: snippet.py
examples/snippets/numbers/event_destinations/get/: snippet.py
examples/snippets/numbers/event_destinations/update/: snippet.py
examples/snippets/sms/batches/cancel/: snippet.py
examples/snippets/sms/batches/dry_run_binary/: snippet.py
examples/snippets/sms/batches/dry_run_mms/: snippet.py
examples/snippets/sms/batches/dry_run_sms/: snippet.py
examples/snippets/sms/batches/get/: snippet.py
examples/snippets/sms/batches/list/: snippet.py
examples/snippets/sms/batches/replace_binary/: snippet.py
examples/snippets/sms/batches/replace_mms/: snippet.py
examples/snippets/sms/batches/replace_sms/: snippet.py
examples/snippets/sms/batches/send_binary/: snippet.py
examples/snippets/sms/batches/send_delivery_feedback/: snippet.py
examples/snippets/sms/batches/send_mms/: snippet.py
examples/snippets/sms/batches/send_sms/: snippet.py
examples/snippets/sms/batches/update_binary/: snippet.py
examples/snippets/sms/batches/update_mms/: snippet.py
examples/snippets/sms/batches/update_sms/: snippet.py
examples/snippets/sms/delivery_reports/get/: snippet.py
examples/snippets/sms/delivery_reports/get_for_number/: snippet.py
examples/snippets/sms/delivery_reports/list/: snippet.py
examples/snippets/sms/groups/create/: snippet.py
examples/snippets/sms/groups/delete/: snippet.py
examples/snippets/sms/groups/get/: snippet.py
examples/snippets/sms/groups/list/: snippet.py
examples/snippets/sms/groups/list_members/: snippet.py
examples/snippets/sms/groups/replace/: snippet.py
examples/snippets/sms/groups/update/: snippet.py
examples/snippets/sms/inbounds/get/: snippet.py
examples/snippets/sms/inbounds/list/: snippet.py
examples/webhooks/: .env.example  README.md  pyproject.toml  server.py  sinch_client_helper.py
examples/webhooks/conversation_api/: controller.py  server_business_logic.py
examples/webhooks/numbers_api/: controller.py
examples/webhooks/sms_api/: controller.py  server_business_logic.py
scripts/: check_snippet_coverage.py
sinch/: __init__.py
sinch/core/: deserializers.py  endpoint.py  enums.py  exceptions.py  pagination.py  signature.py  token_manager.py  types.py
tests/: conftest.py
tests/e2e/: helpers.py  shared_config.py
tests/examples/: test_fast_api_example.py  test_flask_example.py  test_logging_example.py
tests/integration/: test_domain_endpoint_error_handling.py  test_http_transport.py  test_logging.py  test_request_signing.py  test_sms_endpoint_credendials_formatting.py  test_token_refresh.py  test_transport_unicode_handling.py
tests/unit/: http_transport_tests.py  test_check_snippet_coverage.py  test_client.py  test_configuration.py  test_exceptions.py  test_http_transport.py  test_pagination.py  test_serdes.py  test_token_manager.py  (+1 more)
(+1443 files in other folders)
