[tool.poetry]
name = "sinch"
description = "Sinch SDK for Python programming language"
version = "2.0.0"
license = "Apache 2.0"
readme = "README.md"
authors = [
    "Sinch Developer Experience Team <devexp@sinch.com>",
]
repository = "https://github.com/sinch/sinch-sdk-python"
documentation = "https://developers.sinch.com"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Telephony",
    "Intended Audience :: Developers"
]
keywords = ["sinch", "sdk"]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "*"
pydantic = ">=2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
