[metadata]
name = sinch
version = 0.2.0
description = Sinch SDK for Python programming language
long_description = file: README.md
long_description_content_type = text/markdown
author = Sinch Developer Experience Team
author_email = dev@sinch.com
license = Apache 2.0
license_file = LICENSE
include_package_data = true
keywords = sinch, sdk
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Communications :: Telephony
    Intended Audience :: Developers

project_urls =
    homepage = https://github.com/sinch/sinch-sdk-python
    documentation = https://developers.sinch.com

[options]
packages = find:
install_requires =
    requests
    aiohttp
python_requires = >=3.8
